[package]
name = "mdbook-private"
version = "0.2.2"
edition = "2021"
authors = ["Razvan Nicolescu <raz@raztech.io"]
description = "An mdbook preprocessor that controls visibility of private chapters and sections within them"
license = "MPL-2.0"
repository = "https://github.com/RealAtix/mdbook-private"


[dependencies]
clap = "4.5.23"
env_logger = "0.11.5"
log = "0.4.22"
mdbook = "0.4.43"
regex = "1.11.0"
semver = "1.0.24"
serde_json = "1.0.133"
